# mqtt-sample-devices

./: LICENSE.txt  README.md
thermometer/: .dockerignore  Cargo.toml  Dockerfile  README.md
thermometer/src/: main.rs
