[package]
name = "thermometer"
authors = ["AAAR-Salmon"]
description = "Send random numbers like thermo-sensor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
clap = { version = "4.2.7", features = ["derive"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
chrono = "0.4.24"
rumqttc = "0.21.0"
